# svg4reds

./: Cargo.toml  README.md
.github/workflows/: ci.yml
reds/SVG/: Core.reds  Natives.reds
src/: lib.rs
