[package]
name = "svg4reds"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs.git", rev = "v0.1.8" }
usvg = { version = "0.22", default-features = false }
stroke = { git = "https://github.com/dorianprill/stroke.git", rev = "52de5cd" }
